--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -10,13 +10,13 @@
     <h1 align="center"> ЗВІТИ  З ЛАБОРАТОРНИХ РОБІТ <br>                                          
         З ДИСЦИПЛІНИ «ОСНОВИ FRONT-END ТА BACKEND РОЗРОБОК» </h1>
         <p align="center"><b>Студенти групи ІА-03 та ІП-05 Мельничук Анна, Шухман Вероніка</b></p><br>
-        <img src="Veronika.jpg" width="100" height="100">
-		<img src="Anna.jpg" width="100" height="100">
+        <img src="images/Veronika.jpg" width="100" height="100">
+		<img src="images/Anna.jpg" width="100" height="100">
 
         <p>Шухман В. Мельничук А.</p>
         <table border=5px>
             <tr>
-                <td>Лабораторна робота №1</a></td>
+                <td><a href="Lab1.html">Лабораторна робота №1</a></td>
                 <td>Лабораторна робота №2</a></td>
                 <td>Лабораторна робота №3</td>
                 <td>Лабораторна робота №4</td>
