--- a/Head.html
+++ b/Head.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <h1 align="center"> ЗВІТИ  З ЛАБОРАТОРНИХ РОБІТ <br>                                          
-        З ДИСЦИПЛІНИ «ОСНОВИ FRONT-END ТА BACKEND РОЗРОБОК» </h1>
+        З ДИСЦИПЛІНИ «WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ. ОСНОВИ FRONT-END ТА BACKEND РОЗРОБОК» </h1>
         <p align="center"><b>Студенти групи ІА-03 та ІП-05 Мельничук Анна, Шухман Вероніка</b></p><br>
-        <img src="images/Veronika.jpg" width="100" height="100">
-		<img src="images/Anna.jpg" width="100" height="100">
+        <img src="Lab1/images/Veronika.jpg" width="100" height="100">
+		<img src="Lab1/images/Anna.jpg" width="100" height="100">
 
         <p>Шухман В. Мельничук А.</p>
-        <table border=5px>
+        <table border=5px, width="100%">
             <tr>
-                <td><a href="Lab1.html">Лабораторна робота №1</a></td>
+                <td><a href="reports/rep1/report1.html" target="MENU">Лабораторна робота №1</a></td>
                 <td>Лабораторна робота №2</a></td>
                 <td>Лабораторна робота №3</td>
                 <td>Лабораторна робота №4</td>
@@ -26,7 +26,8 @@
                 <td>Лабораторна робота №8</td>
                 <td>Лабораторна робота №9</td>
             </tr>
-        </table>     
+        </table>
+        <a href="Lab1/Lab1.html" target="_blank">До головної сторінки</a><br>
     
 </body>
 </html>
