--- a/Head.html
+++ b/Head.html
@@ -9,11 +9,10 @@
 <body>
     <h1 align="center"> ЗВІТИ  З ЛАБОРАТОРНИХ РОБІТ <br>                                          
         З ДИСЦИПЛІНИ «WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ. ОСНОВИ FRONT-END ТА BACKEND РОЗРОБОК» </h1>
-        <p align="center"><b>Студенти групи ІА-03 та ІП-05 Мельничук Анна, Шухман Вероніка</b></p><br>
-        <img src="Lab1/images/Veronika.jpg" width="100" height="100">
-		<img src="Lab1/images/Anna.jpg" width="100" height="100">
-
-        <p>Шухман В. Мельничук А.</p>
+        <p align="center"><b>БРИГАДА № 27</b></p>
+        <p align="center"><b>Студенти: Шухман Вероніка, гр. ІП-05; Мельничук Анна, гр. ІА-03</b></p>
+    <p align="center"><img src="Lab1/images/Veronika.jpg" width="100" height="100">
+		<img src="Lab1/images/Anna.jpg" width="100" height="100"></p>
         <table border=5px, width="100%">
             <tr>
                 <td><a href="reports/rep1/report1.html" target="MENU">Лабораторна робота №1</a></td>
