--- a/reports/rep1/report1.html
+++ b/reports/rep1/report1.html
@@ -31,22 +31,8 @@
     </tr>
     <tr>
         <td>
-            <a href="content/FormCode.html" target="CONTENT">
-                HTML-код ФОРМИ
-            </a>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <a href="content/ImgCode.html" target="CONTENT">
-                HTML-код ЗОБРАЖЕННЯ
-            </a>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <a href="content/LinkCode.html" target="CONTENT">
-                HTML-код ПОСИЛАНЬ
+            <a href="content/MainPage.html" target="CONTENT">
+                HTML-код головної сторінки
             </a>
         </td>
     </tr>
@@ -54,6 +40,13 @@
         <td>
             <a href="content/Conclusions.html" target="CONTENT">
                 ВИСНОВКИ
+            </a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a href="content/Contributors.html" target="CONTENT">
+                ВИКОНАВЦІ
             </a>
         </td>
     </tr>
