--- a/Head.html
+++ b/Head.html
@@ -16,7 +16,7 @@
         <table border=5px, width="100%">
             <tr>
                 <td><a href="reports/rep1/report1.html" target="MENU">Лабораторна робота №1</a></td>
-                <td>Лабораторна робота №2</a></td>
+                <td><a href="reports/rep2/report2.html" target="MENU">Лабораторна робота №2</a></td>
                 <td>Лабораторна робота №3</td>
                 <td>Лабораторна робота №4</td>
                 <td>Лабораторна робота №5</td>
