--- a/reports/rep1/content/Conclusions.html
+++ b/reports/rep1/content/Conclusions.html
@@ -7,6 +7,13 @@
     <title>Title</title>
 </head>
 <body>
-    <p>Тут будуть висновки</p>
+<big><big align="justify">
+    Висновок: було вирішено створити корисний веб-застосунок з кулінарними рецептами з урахуванням нормами БЖУ.
+    Було виділено основні функціональні та нефункціональні вимоги, був створений продуманий та логічний дизайн сторінки, який
+    обов'язково буде поліпшуватись та вдосконалюватись у наступних лабораторних роботах. Були вдосконалені наші практичні навички
+    роботи з HTML-документом, таблицями, зображеннями, посиланнями, списками, формами. Було створено шаблон звітного HTML-документа
+    для відображення наших результатів роботи, який буде доповнюватись протягом виконання всіх наступних лабораторних робіт.
+    У майбутньому у наш додаток плануємо додати авторизацію та реєстрацію юзера та «корзину» у яку користувач зможе додавати улюблені рецепти, щоб не загубити їх.
+</big></big>
 </body>
 </html>
