--- a/reports/rep1/content/PageAppearance.html
+++ b/reports/rep1/content/PageAppearance.html
@@ -7,6 +7,6 @@
     <title>Title</title>
 </head>
 <body>
- <p>Тут буде показаний зовнішній вигляд сторінки</p>
+<img src="../../images/page_appearance.png">
 </body>
 </html>
