--- a/reports/rep1/content/SubjectInfo.html
+++ b/reports/rep1/content/SubjectInfo.html
@@ -7,6 +7,17 @@
     <title>Title</title>
 </head>
 <body>
- <p>Тут буде інформація по предметному середовищу</p>
+<h1 align="center">Опис предметної галузі</h1>
+<big><big align="justify">
+    Предметна галузь даної веб-сторінки є автоматизованою інформаційною системою довідника з кулінарними рецептами, що містить: дані про рецепти,
+    дані про сайт, з контактними даними, список інгредієнтів, що необхідні для конкретних рецептів, відгуки клієнтів, можливість залишити відгук.
+    На головній сторінці має бути інформація про те, як ми розподіляємо рецепти по категоріям, натиснувши на картинку можна буде перейти на сторінку рецептів
+    з цієї категорії, де вже детальніше буде розписано про кожен з них, також мають бути посилання на інфо-сторінку з контактними даними, на окремі рецепти або статті
+    , сторінку с відгуками користувачів, сторінку з поясненнями щодо наших категорій рецептів та більш детальна інформація про них, інші можливі послуги
+    (наприклад, умови додання свого рецепту на наш сайт та правила доброчесності написання відгуків).
+    На окремій сторінці кожного рецепту має бути гарний опис процесу приготування страви та інгредієнтів необхідних ддя неї, гарні ілюстрації,
+    детальна інформація про те, що може знадобитися з техніки під час приготування страви. Опис рецептів має бути чітким і зрозумілим, а дизайн має бути гарним та лаконічним.
+    Навігація по сторінці має бути легкою та зрозумілою. Застосунок має працювати швидко та бути корисним. Додатково реалізувати можливість реєстрації на сайті.
+</big></big>
 </body>
 </html>
