--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab1</title>
+    <title>Home</title>
     <link href="Lab1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
