--- a/Head.html
+++ b/Head.html
@@ -10,7 +10,7 @@
     <h1 align="center"> ЗВІТИ  З ЛАБОРАТОРНИХ РОБІТ <br>                                          
         З ДИСЦИПЛІНИ «WEB-ОРІЄНТОВАНІ ТЕХНОЛОГІЇ. ОСНОВИ FRONT-END ТА BACKEND РОЗРОБОК» </h1>
         <p align="center"><b>БРИГАДА № 27</b></p>
-        <p align="center"><b>Студенти: Шухман Вероніка, гр. ІП-05; Мельничук Анна, гр. ІА-03</b></p>
+        <p align="center"><b>Студенти: Шухман Вероніка, гр. ІП-05; Мельничук Анна, гр. ІА-03; Доброхотова Катерина, гр. ІТ-01</b></p>
     <p align="center"><img src="Lab1/images/Veronika.jpg" width="100" height="100">
 		<img src="Lab1/images/Anna.jpg" width="100" height="100"></p>
         <table border=5px, width="100%">
