--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -25,5 +25,45 @@
         <textarea name="message"></textarea>
         <input type="submit" name="submit_btn" value="Відправити">
     </form>
+    <div class="listname">
+        <p>Популярне сьогодні:</p>
+    </div>
+    <ul class="beads">
+        <li><a href="#">Курка з рисом</a></li>
+        <li><a href="#">Масляний тост с мармитом</a></li>
+        <li><a href="#">Фіш-н-чіпс</a></li>
+    </ul>
+    <div class="contributors">
+        <p>Виконавці:</p>
+    </div>
+    <div class="contributorstable">
+        <table>
+            <tr>
+                <td>№</td>
+                <td>Прізвище</td>
+                <td>Ім'я</td>
+                <td>Група</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Мельничук</td>
+                <td>Анна</td>
+                <td>ІА-03</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Шухман</td>
+                <td>Вероніка</td>
+                <td>ІП-05</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Доброхотова</td>
+                <td>Катерина</td>
+                <td>ІТ-01</td>
+            </tr>
+        </table>
+
+    </div>
 </body>  
 </html>
