--- a/reports/rep1/content/Contributors.html
+++ b/reports/rep1/content/Contributors.html
@@ -8,7 +8,8 @@
     <big><big align="justify">
         Виконавці проєкту: <br>
         Мельничук Анна, група ІА-03 <br>
-        Шухман Вероніка, група ІП-05
+        Шухман Вероніка, група ІП-05 <br>
+        Доброхотова Катерина, група ІТ-01
     </big></big>
 </body>
 </html>
