--- a/reports/rep1/content/MainPage.html
+++ b/reports/rep1/content/MainPage.html
@@ -8,5 +8,18 @@
 </head>
 <body>
 <img src="../../images/page_code.png">
+<img src="../../images/page_code2.png">
+<p>HTML-код таблиці</p>
+<img src="../../images/page_code2.png">
+<img src="../../images/table.png">
+<p>HTML-код зображень</p>
+<img src="../../images/img_code.png">
+<img src="../../images/images.png">
+<p>HTML-код списку</p>
+<img src="../../images/list_code.png">
+<img src="../../images/fonts.png">
+<p>HTML-код посилань</p>
+<img src="../../images/links_code.png">
+<img src="../../images/fonts.png">
 </body>
 </html>
