--- a/reports/rep1/content/Theme.html
+++ b/reports/rep1/content/Theme.html
@@ -13,7 +13,7 @@
     Мета: придбати практичні навички роботи з HTML-документом, таблицями,
     зображеннями, посиланнями, списками, формами. Створити шаблон звітного HTML-документом для відображення
     результатів роботи всіх лабораторних робіт.<br>
-    Місце розташування: https://github.com/nikelyandjelo/WEB
+    Місце розташування: <a href="https://github.com/nikelyandjelo/WEB">https://github.com/nikelyandjelo/WEB</a>
 </big></big>
 </body>
 </html>
