--- a/reports/rep2/content/CSSDetails.html
+++ b/reports/rep2/content/CSSDetails.html
@@ -5,6 +5,51 @@
     <title>Title</title>
 </head>
 <body>
+<img src="../../images/css_1.png">
+<img src="../../images/css_2.png">
+<img src="../../images/css_3.png">
+<img src="../../images/css_4.png">
+<img src="../../images/css_5.png">
+<p>CSS-код шрифтів</p>
+<img src="../../images/fonts.png">
+<pre><code>
+    .beads li {
+        text-transform: uppercase;
+        font-family: 'Montserrat', sans-serif;
+        line-height: 40px;
+        border-bottom: 1px solid #D4D7D6;
+        position: relative;
+    }
+</code></pre>
+<p>CSS-код тексту</p>
+<img src="../../images/text_class.png">
+<pre><code>
+    .text{
+        padding: 10px 40px;
+        text-align: center;
+        border-radius: 10px;
+        box-shadow: 0 0 7px 3px #aa3e0c87;
+        text-indent: 30px;
+        padding: 10px 20px 10px 20px;
+        margin: 20px auto;
+        width: 400px;
+    }
+</code></pre>
+<p>CSS-код контурів і фону</p>
+<img src="../../images/table.png">
+<pre><code>
+    .contributorstable {
+        background-color: #ce8f7b;
+        position: absolute;
+        top: 78%;
+        left: 65%;
+        border: 2px #EEE3DB solid;
+    }
+    .contributorstable, td, tr {
+        font-size: 20px;
+        border: 2px #EEE3DB solid;
+    }
+</code></pre>
 
 </body>
 </html>
