--- a/reports/rep2/content/Conclusions.html
+++ b/reports/rep2/content/Conclusions.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-
+<big><big align="justify">
+    Висновок: внаслідок виконання лабораторної роботи було удосконалено головну сторінку нашого проєкту та придбано навички роботи
+    з каскадними таблицями стилів CSS, а саме навички роботи з селекторами (id, класу, тегу), шрифтами (font), зміною фону веб-сторінки
+    або окремого її елементу, були використані відступи для коректного відображення сторінки, position елементу змінювалась
+    за потребою на absolute або relative, змінювались контури таблиці та фон елементів списку. Були використані посилання, які
+    будуть доповнюватись у майбутньому.
+</big></big>
 </body>
 </html>
