--- a/reports/rep2/content/Selectors.html
+++ b/reports/rep2/content/Selectors.html
@@ -29,5 +29,21 @@
         text-align: center;
     }
     </code></pre>
+<p>Селектори id:</p>
+<img src="../../images/id_selector.png" >
+<p>Селектори тегу:</p>
+<img src="../../images/logo_class.png">
+<pre><code>
+    .logo h1 {
+        position: relative;
+        color: #5C2610;
+        font-size: 3em;
+        font-weight: normal;
+        line-height: 1;
+        padding: 10px 0;
+        margin: 0;
+        display: inline-block;
+    }
+    </code></pre>
 </body>
 </html>
