--- a/reports/rep2/content/StyleMethods.html
+++ b/reports/rep2/content/StyleMethods.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<img src="../../images/css_methods.png">
+<img src="../../images/css_link.png">
 </body>
 </html>
