--- a/Head.html
+++ b/Head.html
@@ -12,7 +12,8 @@
         <p align="center"><b>БРИГАДА № 27</b></p>
         <p align="center"><b>Студенти: Шухман Вероніка, гр. ІП-05; Мельничук Анна, гр. ІА-03; Доброхотова Катерина, гр. ІТ-01</b></p>
     <p align="center"><img src="Lab1/images/Veronika.jpg" width="100" height="100">
-		<img src="Lab1/images/Anna.jpg" width="100" height="100"></p>
+		<img src="Lab1/images/Anna.jpg" width="100" height="100">
+        <img src="Lab1/images/Katerina.jpg" width="100" height="100"></p>
         <table border=5px, width="100%">
             <tr>
                 <td><a href="reports/rep1/report1.html" target="MENU">Лабораторна робота №1</a></td>
