Added reports 3&4, labs 3&4

--- a/Head.html
+++ b/Head.html
@@ -18,8 +18,8 @@
             <tr>
                 <td><a href="reports/rep1/report1.html" target="MENU">Лабораторна робота №1</a></td>
                 <td><a href="reports/rep2/report2.html" target="MENU">Лабораторна робота №2</a></td>
-                <td>Лабораторна робота №3</td>
-                <td>Лабораторна робота №4</td>
+                <td><a href="reports/rep3/report3.html" target="MENU">Лабораторна робота №3</a></td>
+                <td><a href="reports/rep4/report4.html" target="MENU">Лабораторна робота №4</a></td>
                 <td>Лабораторна робота №5</td>
                 <td>Лабораторна робота №6</td>
                 <td>Лабораторна робота №7</td>
