--- a/Lab3/task21.html
+++ b/Lab3/task21.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Розмітка з плаваючими блоками</title>
+    <title>Таблична розмітка</title>
     <style>
         table {
             height: 200px;
