adjusted links in report 4

--- a/reports/rep2/content/Theme.html
+++ b/reports/rep2/content/Theme.html
@@ -14,7 +14,7 @@
     списками, різноманітними властивостями кольору і фону, зовнішними та
     внутрішними відступами, плаваючими елементами, оформленням текстових
     елементів. <br>
-    Місце розташування: <a href="https://github.com/nikelyandjelo/WEB">https://github.com/nikelyandjelo/WEB</a>
+    Місце розташування: <a href="https://github.com/nikelyandjelo/WEB" target="_blank">https://github.com/nikelyandjelo/WEB</a>
 </big></big>
 </body>
 </html>
