--- a/reports/rep3/content/Task3.html
+++ b/reports/rep3/content/Task3.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<p>ІА-03 Мельничук Анни (вар. 2)<a href="../../../Lab3/Lab3Anna/task3_Anna.html">(до сторінки)</a></p>
+<p>ІА-03 Мельничук Анни (вар. 2)<a href="../../../Lab3/Lab3Anna/task3_Anna.html" target="_blank">(до сторінки)</a></p>
 <img width="100%" src="../../images/var2_mainpage.png">
 <p>HTML-код сторінки</p>
 <img src="../../images/var2_html1.png">
@@ -17,7 +17,7 @@
 <img src="../../images/var2_css3.png">
 <img src="../../images/var2_css4.png">
 
-<p>ІП-05 Шухман Вероніки (вар.6)<a href="../../../Lab3/Lab3V6/lab3.html">(до сторінки)</a></p>
+<p>ІП-05 Шухман Вероніки (вар.6)<a href="../../../Lab3/Lab3V6/lab3.html" target="_blank">(до сторінки)</a></p>
 <img width="100%" src="../../images/ver6_mainpage.png">
 <p>HTML-код сторінки</p>
 <img src="../../images/ver6_html.png">
@@ -34,7 +34,7 @@
 <img src="../../images/ver6_css8.png">
 <img src="../../images/ver6_css9.png">
 
-<p>ІT-01 Доброхотової Катерини (вар.6)<a href="../../../Lab3/Lab3Kate/index.html">(до сторінки)</a></p>
+<p>ІT-01 Доброхотової Катерини (вар.6)<a href="../../../Lab3/Lab3Kate/index.html" target="_blank">(до сторінки)</a></p>
 <img width="100%" src="../../images/var6_mainpage.png">
 <p>HTML-код сторінки</p>
 <img src="../../images/var6_html1.png">
