--- a/reports/rep3/content/Theme.html
+++ b/reports/rep3/content/Theme.html
@@ -13,7 +13,7 @@
     Мета: придбати практичні навички роботи верстки сторінок засобами CSS, верстки на
     основі плаваючих елементів, з’ясувати переваги та недоліки типів макетів веб-
     сторінок. Придбати практичні навички роботи верстки сторінок засобами CSS та FLEXBOX. <br>
-    Місце розташування: <a href="https://github.com/nikelyandjelo/WEB">https://github.com/nikelyandjelo/WEB</a>
+    Місце розташування: <a href="https://github.com/nikelyandjelo/WEB" target="_blank">https://github.com/nikelyandjelo/WEB</a>
 </big></big>
 </body>
 </html>
