--- a/reports/rep4/content/Massives.html
+++ b/reports/rep4/content/Massives.html
@@ -6,17 +6,22 @@
 </head>
 <body>
 
-<p>ІА-03 Мельничук Анни (вар. 9) <a href="../../../Lab4/lab4_9_Anna.html">(до сторінки)</a></p>
+<p>ІА-03 Мельничук Анни (вар. 9) <a href="../../../Lab4/lab4_9_Anna.html" target="_blank">(до сторінки)</a></p>
 <img width="100%" src="../../images/var9_page.png">
 <p>Програмний код сторінки</p>
 <img src="../../images/var9_html1.png">
 <img src="../../images/var9_html2.png">
 
-<p>ІП-05 Шухман Вероніки (вар.6)</p>
+<p>ІП-05 Шухман Вероніки (вар.6) <a href="../../../Lab4/lab4_6_1.html" target="_blank">(до сторінки 1</a> та
+    <a href="../../../Lab4/lab4_6_2.html" target="_blank">до сторінки 2)</a></p>
+<img src="../../images/var6_page.png">
 <p>Програмний код сторінки</p>
+<img src="../../images/var6_code1.png">
+<img src="../../images/var6_code3.png">
+<img src="../../images/var6_code4.png">
 
-<p>ІT-01 Доброхотової Катерини (вар.8) <a href="../../../Lab4/lab4_8_1.html">(до сторінки 1</a> та
-    <a href="../../../Lab4/lab4_8_2.html">до сторінки 2)</a></p>
+<p>ІT-01 Доброхотової Катерини (вар.8) <a href="../../../Lab4/lab4_8_1.html" target="_blank">(до сторінки 1</a> та
+    <a href="../../../Lab4/lab4_8_2.html" target="_blank">до сторінки 2)</a></p>
 <img src="../../images/var8_page.png">
 <p>Програмний код сторінки</p>
 <img src="../../images/var8_code1.png">
