--- a/reports/rep4/content/Theme.html
+++ b/reports/rep4/content/Theme.html
@@ -13,7 +13,7 @@
     ЗАСОВАМИ МОВИ JAVASCRIPT.<br>
     Мета: придбати практичні навички роботи з масивами у js-сценаріях.
     Реалізація програм засовами мови JAVASCRIPT. <br>
-    Місце розташування: <a href="https://github.com/nikelyandjelo/WEB">https://github.com/nikelyandjelo/WEB</a>
+    Місце розташування: <a href="https://github.com/nikelyandjelo/WEB" target="_blank">https://github.com/nikelyandjelo/WEB</a>
 </big></big>
 </body>
 </html>
