--- a/reports/rep4/content/Vik6punkt.html
+++ b/reports/rep4/content/Vik6punkt.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<p>ІА-03 Мельничук Анни (вар. 9) <a href="../../../Lab4/lab4_9_Anna.html">(до сторінки)</a></p>
+<p>ІА-03 Мельничук Анни (вар. 9) <a href="../../../Lab4/lab4_9_Anna.html" target="_blank">(до сторінки)</a></p>
 <img width="100%" src="../../images/var9_page.png">
 <p>Програмний код сторінки</p>
 <img src="../../images/var9_html1.png">
