--- a/Lab4/lab4_6_1.html
+++ b/Lab4/lab4_6_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <p>ВВедіть к-ть елемнтів</p>
+    <p>Введіть к-ть елементів</p>
     <input type="number" id="n">
     <button onclick="calculate()">Calculate</button>
     <div id="result"></div>
