--- a/reports/rep3/content/Task2.html
+++ b/reports/rep3/content/Task2.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 
-<p>Фіксована таблична верстка<a href="../../../Lab3/task21.html">(до сторінки з нею)</a></p>
+<p>Фіксована таблична верстка<a href="../../../Lab3/task21.html" target="_blank">(до сторінки з нею)</a></p>
 <img width="100%" src="../../images/table_fix.png">
 <img src="../../images/code_table_fix.png">
 
-<p>Гумова таблична верстка<a href="../../../Lab3/task21.html">(до сторінки з нею)</a></p>
+<p>Гумова таблична верстка<a href="../../../Lab3/task21.html" target="_blank">(до сторінки з нею)</a></p>
 <img width="100%" src="../../images/table_gum.png">
 <img src="../../images/code_table_gum.png">
 
-<p>Фіксована блокова верстка<a href="../../../Lab3/task22.html">(до сторінки з нею)</a></p>
+<p>Фіксована блокова верстка<a href="../../../Lab3/task22.html" target="_blank">(до сторінки з нею)</a></p>
 <img width="100%" src="../../images/block_fix.png">
 <img src="../../images/code_block_fix.png">
 
-<p>Гумова блокова верстка<a href="../../../Lab3/task22.html">(до сторінки з нею)</a></p>
+<p>Гумова блокова верстка<a href="../../../Lab3/task22.html" target="_blank">(до сторінки з нею)</a></p>
 <img width="100%" src="../../images/block_gum.png">
 <img src="../../images/code_block_gum.png">
 
