added utf-8 to lab4_6_2

--- a/Lab4/lab4_6_2.html
+++ b/Lab4/lab4_6_2.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Quicksort</title>
+    <meta charset="UTF-8">
   </head>
   <body>
     <p>Введіть к-ть елементів масиву:</p>
