added link for report

--- a/reports/rep4/content/Vik6punkt.html
+++ b/reports/rep4/content/Vik6punkt.html
@@ -11,8 +11,10 @@
 <img src="../../images/var9_html1.png">
 <img src="../../images/var9_html2.png">
 
-<p>ІП-05 Шухман Вероніки (вар.6)</p>
+<p>ІП-05 Шухман Вероніки (вар.6)<a href="../../../Lab4/calendar/lab4.html" target="_blank">(до сторінки)</a></p>
 <p>Програмний код сторінки</p>
+
+
 
 <p>ІT-01 Доброхотової Катерини (вар.8)</p>
 <p>Програмний код сторінки</p>
