Added tasks 4-5 for lab5

--- a/reports/rep4/content/Vik6punkt.html
+++ b/reports/rep4/content/Vik6punkt.html
@@ -16,7 +16,7 @@
 
 
 
-<p>ІT-01 Доброхотової Катерини (вар.8)</p>
+<p>ІT-01 Доброхотової Катерини (вар.8)<a href="../../../Lab4/alarm/index.html" target="_blank">(до сторінки)</a></p>
 <p>Програмний код сторінки</p>
 
 </body>
