added task 3 for lab5

--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/unitegallery/1.7.45/css/unite-gallery.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/unitegallery/1.7.45/js/unitegallery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="Lab1.css" rel="stylesheet" type="text/css">
+    <script src="Lab1.js"></script>
 </head>
 <body>
     <div class="logo"><h1>Кулінарний блог</h1></div>
@@ -20,19 +25,31 @@
     <img class="breakfast" src="images/breakfast.jpg">
     <div class="breakfasttext">Сніданок</div>
     </div>
-    <form  class="form" name="feedback">
-        <div class="caption">Відгук</div>
-        <textarea name="message"></textarea>
-        <input type="submit" name="submit_btn" value="Відправити">
-    </form>
-    <div class="listname">
-        <p>Популярне сьогодні:</p>
-    </div>
-    <ul class="beads">
+   <div class="dropdown">
+    <button class="dropdown-toggle">Меню</button>
+    <ul class="dropdown-menu">
         <li><a href="#">Курка з рисом</a></li>
         <li><a href="#">Масляний тост с мармитом</a></li>
         <li><a href="#">Фіш-н-чіпс</a></li>
     </ul>
+    </div>
+    <div class="accordion">
+    <button class="accordion-header">Ким були розроблені рецепти?</button>
+    <div class="accordion-panel">
+    <p>Ми розробили ці рецепти власноруч</p>
+    </div>
+
+    <button class="accordion-header">Як вас знайти у соц мережах?</button>
+    <div class="accordion-panel">
+    <p>Ми додали лінки на наші соц мережі внизу сайту</p>
+    </div>
+
+    <button class="accordion-header">Коли будуть оновлення сайту?</button>
+    <div class="accordion-panel">
+    <p>Ми працюємо над оновленнями кожен день!!!</p>
+    </div>
+    </div>
+
     <div class="contributors">
         <p>Виконавці:</p>
     </div>
