--- a/Head.html
+++ b/Head.html
@@ -20,14 +20,14 @@
                 <td><a href="reports/rep2/report2.html" target="MENU">Лабораторна робота №2</a></td>
                 <td><a href="reports/rep3/report3.html" target="MENU">Лабораторна робота №3</a></td>
                 <td><a href="reports/rep4/report4.html" target="MENU">Лабораторна робота №4</a></td>
-                <td>Лабораторна робота №5</td>
+                <td><a href="reports/rep5/report5.html" target="MENU">Лабораторна робота №5</a></td>
                 <td>Лабораторна робота №6</td>
                 <td>Лабораторна робота №7</td>
                 <td>Лабораторна робота №8</td>
                 <td>Лабораторна робота №9</td>
             </tr>
         </table>
-        <a href="Lab1/Lab1.html" target="_blank">До головної сторінки</a><br>
+        <a href="Lab5/Lab5.html" target="_blank">До головної сторінки</a><br>
     
 </body>
 </html>
