add unit gallery for task 3

--- a/Lab5/Lab5.html
+++ b/Lab5/Lab5.html
@@ -6,6 +6,9 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/unitegallery/1.7.45/css/unite-gallery.css" />
+    <link rel="stylesheet" href="unitegallery/css/unite-gallery.css">
+    <script src="unitegallery/js/unitegallery.min.js"></script>
+    <script src="unitegallery/themes/default/ug-theme-default.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/unitegallery/1.7.45/js/unitegallery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
