--- a/reports/rep5/content/UniteGallery.html
+++ b/reports/rep5/content/UniteGallery.html
@@ -6,7 +6,26 @@
 </head>
 <body>
 
+<a href="../../../Lab5/galary2.html" target="_blank">До виконання</a><br><br>
 
+<p>Фотогалерея з можливістю перегляду збільшених зображень та слайдер фотографій. </p>
+<img src="../../images/photoslider.png"><br>
+<p>JS code:</p>
+<img src="../../images/photoslider_js.png"><br>
+<p>HTML code:</p>
+<img src="../../images/photoslider_html.png">
+<img src="../../images/photoslider_html2.png">
+
+<br><br><br><br>
+<a href="../../../Lab5/galary3.html" target="_blank">До виконання</a><br><br>
+
+<p>Cлайдер відеоматеріалів. </p>
+<img src="../../images/videoslider.png"><br>
+<p>JS code:</p>
+<img src="../../images/videoslider_js.png"><br>
+<p>HTML code: </p>
+<img src="../../images/videoslider_html1.png"><br>
+<img src="../../images/videoslider_html2.png"><br>
 
 </body>
 </html>
